@@ -1287,11 +1287,26 @@ static Image *ReadJPEGImage(const ImageInfo *image_info,
       ThrowReaderException(ResourceLimitError,ImagePixelLimitExceeded,image);
     }
 
+  /*
+    Verify that we support the number of output components.
+  */
+  if ((jpeg_info.output_components != 1) &&
+      (jpeg_info.output_components != 3) &&
+      (jpeg_info.output_components != 4))
+    {
+      jpeg_destroy_decompress(&jpeg_info);
+      ThrowReaderException(CoderError,ImageTypeNotSupported,image);
+    }
+
   jpeg_pixels=MagickAllocateArray(JSAMPLE *,
 				  jpeg_info.output_components,
-				  image->columns*sizeof(JSAMPLE));
+				  MagickArraySize(image->columns,
+                                                  sizeof(JSAMPLE)));
   if (jpeg_pixels == (JSAMPLE *) NULL)
-    ThrowReaderException(ResourceLimitError,MemoryAllocationFailed,image);
+    {
+      jpeg_destroy_decompress(&jpeg_info);
+      ThrowReaderException(ResourceLimitError,MemoryAllocationFailed,image);
+    }
 
   /*
     Extended longjmp-based error handler (with jpeg_pixels)
@@ -1352,7 +1367,8 @@ static Image *ReadJPEGImage(const ImageInfo *image_info,
 	      *q++=image->colormap[index];
 	    }
 	}
-      else
+      else if ((jpeg_info.output_components == 3) ||
+               (jpeg_info.output_components == 4))
 	{
 	  if (jpeg_info.data_precision > 8)
 	    {
